tests/reject/vtMutatingMethodImmutableSelf.emojic
🕊 🌼 🍇
  🖍🆕 text 🔡

  🆕 🍼 text 🔡 🍇🍉

  ❗️ 🌵 🍇
    😀 text❗️
    😣👇❗️
  🍉

  🖍 ❗️ 😣 🍇
    🔤Rabzmw🔤 ➡️ 🖍🆕text
  🍉
🍉

🏁 🍇
  🆕🌼 🔤Discovery🔤❗️ ➡️ s
  🌵 s❗️
🍉
